added a basic clock and date

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Timer</title>
 </head>
 <body>
     <h3>Timer</h3>
+
+    <h4>Clock</h4>
+    
+    <div class="clock-wrapper">
+        <div class="date">
+            <p class="fullDate"></p>
+        </div>
+        <div class="time">
+            <div class="fullTime">
+                <span class="hour"></span>
+                <span class="colon">:</span>
+                <span class="min"></span>
+                <span class="colon">:</span>
+                <span class="sec"></span>
+            </div>
+        </div>
+    </div>
+
+    <script src="timer.js"></script>
 </body>
 </html>
