stopwatch feature finished

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="watch.css">
     <title>Timer</title>
 </head>
 <body>
     <h3>Timer</h3>
+    <div class="stopwatch-wrapper">
+        <h2>Stopwatch</h2>
+        <div class="stopwatch">
+            <div class="watch">00 : 00 : 00</div>
+        </div>
+        <button class="startbtn">Start</button>
+        <button class="stopbtn">Stop</button>
+        <button class="resetbtn">Reset</button>
+    </div>
+    <script src="stopwatch.js"></script>
 </body>
 </html>
